Move model from mycitadel-desktop

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
       matrix:
         feature:
           - serde
+          - cli
     steps:
       - uses: actions/checkout@v2
       - name: Install rust stable
