--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,15 @@ strict_encoding = { version = "~0.8.0", features = ["crypto", "chrono", "bitcoin
 commit_verify = "~0.8.0"
 bp-core = { version = "~0.8.0-beta.2", features = ["wallet"] }
 rgb-std = "0.8.0-rc.1"
-descriptor-wallet = { version = "~0.8.1", features = ["descriptors"] }
+descriptor-wallet = { version = "~0.8.2", features = ["descriptors", "miniscript", "keygen", "hwi"] }
 bitcoin = "0.28.1"
+miniscript = "7.0.0"
 electrum-client = { version = "0.10.1", optional = true }
 serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
 serde_with = { version = "1.8", features = ["hex"], optional = true }
 serde_yaml = { version = "0.8", optional = true }
 serde_json = { version = "1", optional = true }
+chrono = "0.4.19"
 clap = { version = "~3.1.18", optional = true, features = ["derive"] }
 
 [features]
