--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --bin rgb --features cli,serde
+          args: --bins --features cli,serde
   features:
     runs-on: ubuntu-latest
     strategy:
