--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bitcoin_scripts = "0.9.0"
 descriptor-wallet = { version = "~0.9.0", features = ["descriptors", "miniscript", "keygen", "hwi", "sign"] }
 bitcoin = "0.29.2"
 miniscript = "9.0.1"
+hwi = "0.6.0"
 electrum-client = { version = "0.12.1", optional = true }
 serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
 serde_with = { version = "1.14", features = ["hex"], optional = true }
@@ -40,3 +41,6 @@ serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
     "amplify/serde", "commit_verify/serde", "strict_encoding/serde",
     "descriptor-wallet/serde", "bp-core/serde", "rgb-std/serde",
     "bitcoin/serde"]
+
+[patch.crates-io]
+descriptor-wallet = { git = "https://github.com/BP-WG/descriptor-wallet", branch = "v0.9" }
