--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ lnpbp = "~0.9.0"
 strict_encoding = { version = "~0.9.0", features = ["crypto", "chrono", "bitcoin"] }
 commit_verify = "~0.9.0"
 bp-core = { version = "~0.9.0", features = ["wallet"] }
-rgb-std = "0.9.0"
 bitcoin_scripts = "0.9.0"
 descriptor-wallet = { version = "~0.9.0", features = ["descriptors", "miniscript", "keygen", "hwi", "sign"] }
 bitcoin = "0.29.2"
@@ -39,5 +38,4 @@ electrum = ["electrum-client"]
 cli = ["clap", "serde_yaml", "serde_json", "descriptor-wallet/electrum", "electrum"]
 serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
     "amplify/serde", "commit_verify/serde", "strict_encoding/serde",
-    "descriptor-wallet/serde", "bp-core/serde", "rgb-std/serde",
-    "bitcoin/serde"]
+    "descriptor-wallet/serde", "bp-core/serde", "bitcoin/serde"]
