--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ rust-version = "1.59.0"
 exclude = [".github", "contrib"]
 
 [dependencies]
-amplify = "3.13.0"
+amplify = "3.14.2"
 lnpbp = "~0.9.0"
-strict_encoding = { version = "~0.9.0", features = ["crypto", "chrono", "bitcoin"] }
+strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
 commit_verify = "~0.9.0"
 bp-core = { version = "~0.9.0", features = ["wallet"] }
 bitcoin_scripts = "0.9.0"
@@ -23,7 +23,7 @@ descriptor-wallet = { version = "~0.9.0", features = ["descriptors", "miniscript
 bitcoin = "0.29.2"
 miniscript = "9.0.1"
 hwi = "0.6.0"
-electrum-client = { version = "0.12.1", optional = true }
+electrum-client = { version = "0.13.0", optional = true }
 serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
 serde_with = { version = "1.14", features = ["hex"], optional = true }
 serde_yaml = { version = "0.9", optional = true }
