--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpro"
-version = "0.2.1"
+version = "0.3.0"
 license = "AGPL-3.0"
 authors = ["Dr Maxim Orlovsky <orlovsky@pandoraprime.ch>"]
 description = "Rust bitcoin wallet library for professional use"
@@ -16,14 +16,12 @@ exclude = [".github", "contrib"]
 amplify = "3.14.2"
 lnpbp = "~0.9.0"
 strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
-commit_verify = "~0.9.0"
-bp-core = { version = "~0.9.0", features = ["wallet"] }
-bitcoin_scripts = "0.9.0"
-descriptor-wallet = { version = "~0.9.0", features = ["descriptors", "miniscript", "keygen", "hwi", "sign"] }
+bitcoin_scripts = "0.10.0-alpha.2"
+descriptor-wallet = { version = "~0.10.0-alpha.2", git = "https://github.com/BP-WG/descriptor-wallet", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
 bitcoin = "0.29.2"
 miniscript = "9.0.1"
 hwi = "0.6.0"
-electrum-client = { version = "0.13.0", optional = true }
+electrum-client = { version = "0.14.0", optional = true }
 serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
 serde_with = { version = "1.14", features = ["hex"], optional = true }
 serde_yaml = { version = "0.9", optional = true }
@@ -37,5 +35,8 @@ all = ["serde", "cli", "electrum"]
 electrum = ["electrum-client"]
 cli = ["clap", "serde_yaml", "serde_json", "descriptor-wallet/electrum", "electrum"]
 serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
-    "amplify/serde", "commit_verify/serde", "strict_encoding/serde",
-    "descriptor-wallet/serde", "bp-core/serde", "bitcoin/serde"]
+    "amplify/serde", "descriptor-wallet/serde", "bitcoin/serde"]
+
+[patch.crates-io]
+bitcoin_scripts = { git = "https://github.com/BP-WG/bp-foundation" }
+bitcoin_blockchain = { git = "https://github.com/BP-WG/bp-foundation" }
