--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "wallet"]
 categories = ["cryptography::cryptocurrencies"]
 readme = "README.md"
 edition = "2021"
-rust-version = "1.59.0"
+rust-version = "1.66.0" # due to depencencies
 exclude = [".github", "contrib"]
 
 [dependencies]
