new SigsReq types - account-based and n-of-m fingerprints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
 [patch.crates-io]
 bitcoin_scripts = { git = "https://github.com/BP-WG/bp-foundation" }
 bitcoin_blockchain = { git = "https://github.com/BP-WG/bp-foundation" }
+descriptor-wallet = { git = "https://github.com/BP-WG/descriptor-wallet" }
