--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpro"
-version = "0.3.0"
+version = "0.4.0"
 license = "AGPL-3.0"
 authors = ["Dr Maxim Orlovsky <orlovsky@pandoraprime.ch>"]
 description = "Rust bitcoin wallet library for professional use"
@@ -16,8 +16,8 @@ exclude = [".github", "contrib"]
 amplify = "3.14.2"
 lnpbp = "~0.9.0"
 strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
-bitcoin_scripts = "0.10.0-alpha.2"
-descriptor-wallet = { version = "~0.10.0-alpha.2", git = "https://github.com/BP-WG/descriptor-wallet", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
+bitcoin_scripts = "0.10.0"
+descriptor-wallet = { version = "~0.10.0", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
 bitcoin = "0.29.2"
 miniscript = "9.0.1"
 hwi = "0.6.0"
@@ -36,8 +36,3 @@ electrum = ["electrum-client"]
 cli = ["clap", "serde_yaml", "serde_json", "descriptor-wallet/electrum", "electrum"]
 serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
     "amplify/serde", "descriptor-wallet/serde", "bitcoin/serde"]
-
-[patch.crates-io]
-bitcoin_scripts = { git = "https://github.com/BP-WG/bp-foundation" }
-bitcoin_blockchain = { git = "https://github.com/BP-WG/bp-foundation" }
-descriptor-wallet = { git = "https://github.com/BP-WG/descriptor-wallet" }
