--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ exclude = [".github", "contrib"]
 amplify = "3.14.2"
 lnpbp = "~0.9.0"
 strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
-bitcoin_scripts = "0.10.0-alpha.2"
-descriptor-wallet = { version = "~0.10.0-alpha.2", git = "https://github.com/BP-WG/descriptor-wallet", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
+bitcoin_scripts = "0.10.0"
+descriptor-wallet = { version = "~0.10.0", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
 bitcoin = "0.29.2"
 miniscript = "9.0.1"
 hwi = "0.6.0"
-electrum-client = { version = "0.14.0", optional = true }
+electrum-client = { version = "0.14.1", optional = true }
 serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
 serde_with = { version = "2.3.2", features = ["hex"], optional = true }
 chrono = "0.4.19"
