add OutpointFilter to Wallet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
 strict_encoding2 = { package = "strict_encoding", version = "2.3" }
 bitcoin_scripts = "0.10.0"
 descriptor-wallet = { version = "~0.10.0", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
-rgb-std = "0.10.2"
-rgb-wallet = "0.10.2"
+rgb-std = "0.10.3"
+rgb-wallet = "0.10.3"
 bitcoin = "0.29.2"
 miniscript = "9.0.1"
 hwi = "0.6.0"
@@ -35,3 +35,6 @@ all = ["serde", "electrum"]
 electrum = ["electrum-client"]
 serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
     "amplify/serde", "descriptor-wallet/serde", "bitcoin/serde", "rgb-std/serde", "rgb-wallet/serde"]
+
+[patch.crates-io]
+rgb-std = { git = "https://github.com/RGB-WG/rgb-wallet", branch = "develop" }
