--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,20 +24,6 @@ jobs:
         with:
           command: check
           args: --workspace
-  binary:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install rust stable
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - name: Default build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --bins --features cli,serde
   features:
     runs-on: ubuntu-latest
     strategy:
@@ -45,7 +31,7 @@ jobs:
       matrix:
         feature:
           - serde
-          - cli
+          - electrum
     steps:
       - uses: actions/checkout@v2
       - name: Install rust stable
